--- a/src/index.scss
+++ b/src/index.scss
@@ -122,7 +122,7 @@ code {
 
 /* NAVBAR *//* NAVBAR *//* NAVBAR *//* NAVBAR *//* NAVBAR *//* NAVBAR *//* NAVBAR */
 /* ABOUT *//* ABOUT *//* ABOUT *//* ABOUT *//* ABOUT *//* ABOUT *//* ABOUT *//* ABOUT */
-.about{
+.about__homepage{
   width:100%;
   height:100%;
   display:flex;
