--- a/src/index.scss
+++ b/src/index.scss
@@ -331,6 +331,9 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+  @media (max-width: 700px) {
+    flex-direction: column;
+  }
 }
 
 .showcase__components {
@@ -338,6 +341,9 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+  @media (max-width: 700px) {
+    flex-direction: column;
+  }
 }
 
 /* SHOWCASE *//* SHOWCASE *//* SHOWCASE *//* SHOWCASE *//* SHOWCASE *//* SHOWCASE *//* SHOWCASE */
@@ -354,16 +360,18 @@ code {
   box-shadow: 0 0 22px #2EC4B6;
   margin: 1rem;
   position: absolute;
+  @media (max-width: 700px) {
+    width:35rem;
+    height:20rem;
+  }
 }
 
 .number {
   display: flex;
   width: 100%;
-  //height:30%;
   align-items: center;
   justify-content: space-around;
   font-size: 4rem;
-
 }
 
 .orders {
@@ -387,7 +395,9 @@ code {
   justify-content: space-around;
   align-items: center;
   box-shadow: 0 0 10px #2EC4B6;
-
+  @media (max-width: 700px) {
+    font-size:1.5rem;
+  }
 }
 
 .select {
@@ -419,6 +429,11 @@ code {
   align-items: center;
   box-shadow: 0 0 10px #2EC4B6;
   background-color: #2EC4B6;
+  @media (max-width: 700px) {
+    font-size:1.5rem;
+    width:12rem;
+    height:3rem;
+  }
 }
 
 /* CALCULATOR *//* CALCULATOR *//* CALCULATOR *//* CALCULATOR *//* CALCULATOR *//* CALCULATOR *//* CALCULATOR */
@@ -446,12 +461,30 @@ code {
   padding: 1rem;
   border-radius: 10px;
   margin: 1rem;
+  @media (max-width: 700px) {
+    width:3.5rem;
+    height:3.5rem;
+    font-size:3rem;
+    margin:0;
+    padding:0;
+  }
+}
+.box{
+  @media (max-width: 700px){
+    margin:0.1rem 0.3rem;
+  }
 }
 
 .boxEquals {
   width: 7rem;
   height: 7rem;
   font-size: 5rem;
+  @media (max-width: 700px) {
+    width:3.6rem;
+    height:3.6rem;
+    margin:0.2rem;
+    font-size:3.5rem;
+  }
 }
 
 .firstLine, .secondLine, .thirdLine {
@@ -463,6 +496,9 @@ code {
 .plus {
   font-size: 7rem;
   cursor: pointer;
+  @media (max-width: 700px){
+    font-size:3rem;
+  }
 }
 
 .calculatorHeader {
@@ -471,6 +507,9 @@ code {
   align-self: flex-start;
   margin: 0;
   margin-left: 1rem;
+  @media (max-width: 700px) {
+    font-size:2rem;
+  }
 }
 
 .calculatorHeaderMin {
@@ -479,6 +518,9 @@ code {
   margin: 0;
   margin-left: 1rem;
   font-size: 2rem;
+  @media (max-width: 700px) {
+    font-size:1rem;
+  }
 }
 
 .line {
@@ -547,6 +589,9 @@ code {
   display: flex;
   justify-content: center;
   align-items: center;
+  @media (max-width: 700px) {
+    width:90%;
+  }
 }
 
 .gramLink {
@@ -554,6 +599,9 @@ code {
   font-size: 10rem;
   color: #2EC4B6;
   cursor: pointer;
+  @media (max-width: 700px) {
+    font-size:7rem;
+  }
 }
 /* ====================================================== */
 .alexHome {
